--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^4.5.0",
     "tailwindcss": "^3.4.0"
   }
 }
